# archlinux

./: README
indicator-messages/src/indicator-messages-0.4.0/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool
indicator-messages/src/indicator-messages-0.4.0/data/: Makefile  Makefile.am  Makefile.in  indicator-messages.service  indicator-messages.service.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/: Makefile  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/16x16/: Makefile  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/16x16/categories/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/16x16/status/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/22x22/: Makefile  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/22x22/categories/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/22x22/status/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/24x24/: Makefile  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/24x24/status/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/32x32/: Makefile  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/32x32/categories/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/32x32/status/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/48x48/: Makefile  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/48x48/status/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/scalable/: Makefile  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/data/icons/scalable/categories/: Makefile  Makefile.am  Makefile.in
indicator-messages/src/indicator-messages-0.4.0/po/: Makefile  Makefile.in  POTFILES  POTFILES.in
indicator-messages/src/indicator-messages-0.4.0/src/: Makefile  Makefile.am  Makefile.in  app-menu-item.c  app-menu-item.h  dbus-data.h  default-applications.c  default-applications.h  dirs.h  gen-messages-service.xml.c  gen-messages-service.xml.h  im-menu-item.c  im-menu-item.h  indicator-messages-service  indicator-messages.c  launcher-menu-item.c  launcher-menu-item.h  libmessaging.la  libmessaging_la-gen-messages-service.xml.lo  libmessaging_la-indicator-messages.lo  messages-service-dbus.c  messages-service-dbus.h  messages-service.c  messages-service.xml  seen-db.c  seen-db.h
indicator-messages/src/indicator-messages-0.4.0/src/.deps/: indicator_messages_service-app-menu-item.Po  indicator_messages_service-default-applications.Po  indicator_messages_service-gen-messages-service.xml.Po  indicator_messages_service-im-menu-item.Po  indicator_messages_service-launcher-menu-item.Po  indicator_messages_service-messages-service-dbus.Po  indicator_messages_service-messages-service.Po  indicator_messages_service-seen-db.Po  libmessaging_la-gen-messages-service.xml.Plo  libmessaging_la-indicator-messages.Plo
indicator-messages/src/indicator-messages-0.4.0/src/.libs/: libmessaging.la  libmessaging.lai
indicator-session/src/indicator-session-0.2.17/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libtool
indicator-session/src/indicator-session-0.2.17/data/: Makefile  Makefile.am  Makefile.in  indicator-session.schemas  indicator-session.schemas.in  indicator-session.service.in
indicator-session/src/indicator-session-0.2.17/data/icons/: Makefile  Makefile.am  Makefile.in
indicator-session/src/indicator-session-0.2.17/data/icons/16x16/: Makefile  Makefile.in
indicator-session/src/indicator-session-0.2.17/data/icons/22x22/: Makefile  Makefile.in
indicator-session/src/indicator-session-0.2.17/data/icons/24x24/: Makefile  Makefile.in
indicator-session/src/indicator-session-0.2.17/data/icons/32x32/: Makefile  Makefile.in
indicator-session/src/indicator-session-0.2.17/data/icons/scalable/: Makefile  Makefile.in
indicator-session/src/indicator-session-0.2.17/po/: .intltool-merge-cache  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  af.po  am.gmo  am.po  an.po  ar.gmo  ar.po  ast.po  az.gmo  az.po  be.po  bg.po  bn.gmo  bn.po  br.po  bs.po  ca.gmo  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.gmo  en_AU.po  en_CA.gmo  en_CA.po  en_GB.po  eo.po  es.gmo  es.po  (+89 more)
indicator-session/src/indicator-session-0.2.17/src/: Makefile  Makefile.am  Makefile.in  consolekit-manager-client.h  consolekit-session-client.h  dbus-shared-names.h  dbusmenu-shared.h  dialog.c  dialog.h  gconf-helper.c  gconf-helper.h  gdm-local-display-factory-client.h  gdm-local-display-factory.xml  gen-session-dbus.xml.c  gen-session-dbus.xml.h  gtk-logout-helper  gtk-logout-helper.c  indicator-session-service  indicator-session.c  libsession.la  libsession_la-indicator-session.lo  lock-helper.c  lock-helper.h  session-dbus.c  session-dbus.h  session-dbus.xml  session-service.c  upower-client.h  upower.xml  users-service-client.h  users-service-dbus.c  users-service-dbus.h  users-service-marshal.c  users-service-marshal.h  users-service.xml
indicator-session/src/indicator-session-0.2.17/src/.deps/: gtk_logout_helper-dialog.Po  gtk_logout_helper-gconf-helper.Po  gtk_logout_helper-gtk-logout-helper.Po  indicator_session_service-gconf-helper.Po  indicator_session_service-gen-session-dbus.xml.Po  indicator_session_service-lock-helper.Po  indicator_session_service-session-dbus.Po  indicator_session_service-session-service.Po  indicator_session_service-users-service-dbus.Po  indicator_session_service-users-service-marshal.Po  libsession_la-indicator-session.Plo
indicator-session/src/indicator-session-0.2.17/src/.libs/: libsession.la  libsession.lai
(+150 files in other folders)
